# tsechacks2026

./: .gitignore  API_QUICK_REFERENCE_CARD.md  COMPLETION_REPORT.md  INTEGRATION_SUMMARY.md  Murph_API_Development.postman_environment.json  Murph_API_Postman.postman_collection.json  Murph_API_Production.postman_environment.json  Murph_API_Staging.postman_environment.json  POSTMAN_AUTOMATED_TESTING.md  POSTMAN_GUIDE.md  README.md  TESTING_GUIDE.md  VISUAL_REFERENCE.md  test_intent.py
backend/: .env.example  API_ROUTES.md  CHANGES_SUMMARY.md  MURPH_BACKEND_DOCUMENTATION.md  README.md  check_service_role.py  fix_rls_policies.sql  migration_add_listing_fields.sql  migration_add_milestones.sql  pyproject.toml  run_test_course_detail.bat  run_test_supabase.bat  run_test_supabase.sh  server.py  test_course_detail.py  test_e2e_upload_and_course_detail.py  test_supabase.py
backend/app/: __init__.py  config.py  deps.py  errors.py  main.py  models.py  schemas.py  supabase_client.py
backend/app/routers/: auth.py  creator.py  discovery.py  milestones.py  payments.py  reviews.py  sessions.py  teacher.py  users.py  wallet.py
backend/app/services/: __init__.py  ai.py  finternet.py  metering.py  seed.py
frontend/: .env.example  API_QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  THEME.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AIChat.css  AIChat.jsx  Layout.css  Layout.jsx  ReviewForm.css  ReviewForm.jsx  SearchOverlay.css  SearchOverlay.jsx  SessionTimer.css  (+7 more)
(+37 files in other folders)
