[project]
name = "murph-backend"
version = "0.1.0"
description = "Murph: On-Demand Learning backend (FastAPI + Supabase + Groq/OpenAI)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "supabase>=2.6",
  "httpx>=0.27",
  "openai>=1.40",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "pandas>=2.2",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100

